rebuttal to timing the training:

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -343,6 +343,7 @@ Networks were trained for $100$ epochs with a batch size of $64$ using RMSprop w
 
 \begin{itemize}
     \item Standard autoencoders may not be used for sample synthesis
+    \item {\color{red} TO TIDY: Training time will vary based on resource available, choice of framework and machine. The additional computation cost from corruption is minimal, and the computational cost assocated with the adversarial loss is dependant on the size of the discriminator. Comparison of training time is likely to be less meaninful. Instead, we had added additional results to demonstate the benefits of using DAAE or iDAAE compared to other state of art models.}
 \end{itemize}
 
 {\color{red} TO TIDY: In our revised version we include facial attribute classification experients which compare our model to state of the art models rather than PCA, which we hope motivates the models}
