in other comments making it clear what was in the original paper

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -376,7 +376,7 @@ The second concern regarding the experimental setup is about choice of the prior
 \begin{itemize}
     \item Yes, exactly. Although we did not explore this further, since we were focusing on AAE, this could be an avenue for future work. We have added this to the Future Work section of our paper to hilight the significance of our work for DVAEs as well as DAAEs.
     \begin{quote}
-        6) applying our proposed sampling process to the DVAE \cite{im2015denoising} - for which sampling is non-trivial for the same reasons discussed for the DAAE
+        6) applying our proposed sampling process to the DVAE \{im2015denoising\} - for which sampling is non-trivial for the same reasons discussed for the DAAE
     \end{quote}
 \end{itemize}
 
