small changes to layout

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -548,9 +548,9 @@ The vectors output by the encoder may take any real values, therefore minimising
 \end{itemize}
 
 {\color{blue}
-15. Section V. Last paragraph. "... non-denoising adversarial autoencoders" -> "... non-denoising adversarial autoencoders AAE [13]"} \newline
+15. Section V. Last paragraph. ``... non-denoising adversarial autoencoders'' $\rightarrow$ ``... non-denoising adversarial autoencoders AAE [13]''} \newline
 
-We have done this
+We have done this.
 
 {\color{blue}
 16. Section VI.B.2. The only datasets where the colour scheme of images is not mentioned} \newline
@@ -578,7 +578,10 @@ We have added the following:
     \end{quote}
 \end{itemize}
 
+
 19. Section VI.D. The first sentence makes it unclear that for AAE images are not corrupted and the following statements that for AAE uncorrupted images are used are confusing
+
+
 20. Tables III and IV. "200D Gaussian" is placed such that it was used only for DAAE, moreover in the following tables "200D Gaussian" is repeated for each row
 21. Section VI.D.1. It would be better to have more discussion about why the performance on MNIST of the proposed methods is worse than AAE's.
 22. Section VI.E. It is claimed that "if we pass samples from the prior through the decoder of a trained DAAE, the samples are likely to be inconsistent with the training data". It would be interesting to see this in practise. There are results with $z^{(0)}$, but they are taken from some other distribution rather than from the prior.
