comment on 1st line in section VID

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -583,7 +583,7 @@ We have added the following:
 }
 
 {\color{red}
-The first secntence is making a distinction between the reconstruction task (for which we no longer corrupt images) and the synthesis task. In the revised version of the paper we perform reconstruction on non-corrupted image, we have changed updates this sentence as follows:
+The first secntence is making a distinction between the reconstruction task (for which, in the revised version, we no longer corrupt images) and the synthesis task. In the revised version of the paper we perform reconstruction on non-corrupted image, we have updated this sentence as follows:
 
 \begin{quote}
 In reconstruction, we start from a test data sample, encode it to get a latent sample and decode to reconstruct the original. 
